--- a/requirements.txt
+++ b/requirements.txt
@@ -6,31 +6,54 @@ cycler==0.12.1
 filelock==3.20.0
 fonttools==4.60.1
 fsspec==2025.9.0
+hf-xet==1.2.0
+huggingface-hub==0.36.0
 idna==3.4
 Jinja2==3.1.6
 joblib==1.5.2
 kiwisolver==1.4.9
+lightgbm==4.6.0
 MarkupSafe==3.0.3
 matplotlib==3.10.7
 mpmath==1.3.0
 networkx==3.4.2
 numpy==1.26.4
+nvidia-cublas-cu12==12.1.3.1
+nvidia-cuda-cupti-cu12==12.1.105
+nvidia-cuda-nvrtc-cu12==12.1.105
+nvidia-cuda-runtime-cu12==12.1.105
+nvidia-cudnn-cu12==9.1.0.70
+nvidia-cufft-cu12==11.0.2.54
+nvidia-curand-cu12==10.3.2.106
+nvidia-cusolver-cu12==11.4.5.107
+nvidia-cusparse-cu12==12.1.0.106
+nvidia-nccl-cu12==2.20.5
+nvidia-nvjitlink-cu12==12.9.86
+nvidia-nvtx-cu12==12.1.105
 packaging==25.0
 pandas==2.3.3
 pillow==11.0.0
 pyparsing==3.2.5
 python-dateutil==2.9.0.post0
 pytz==2025.2
+PyYAML==6.0.3
+regex==2025.11.3
 requests==2.28.1
+safetensors==0.6.2
 scikit-learn==1.7.2
 scipy==1.15.3
+seaborn==0.13.2
 six==1.17.0
 sympy==1.14.0
 threadpoolctl==3.6.0
 tk==0.1.0
-torch==1.13.1+cu116
-torchvision==0.14.1+cu116
+tokenizers==0.22.1
+torch==2.4.1+cu121
+torchaudio==2.4.1+cu121
+torchvision==0.19.1+cu121
 tqdm==4.67.1
+transformers==4.57.1
+triton==3.0.0
 typing_extensions==4.15.0
 tzdata==2025.2
 urllib3==1.26.13
