--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
 datasets/
 zip/
-analyze_UI/cache/
-compal_analyze_data.py
+Preprocess/cache/
+results/
 __pycache__/
 checkpoints/
 checkpoints.zip
